src-tauri/src/renderer/snapshots/ezmm_lib__renderer__codec__tests__h264_args_snapshot.snap
---
source: src/renderer/codec.rs
expression: args
---
- "-pix_fmt"
- yuv420p
- "-c:v"
- libx264
- "-crf"
- "23"
- "-preset"
- medium
- "-map"
- "[vout]"
- "-map"
- "[aout]"
- "-c:a"
- aac
- "-b:a"
- 192k
- "-ar"
- "44100"
- "-ac"
- "2"
- /out/test.mp4
