src-tauri/src/renderer/snapshots/ezmm_lib__renderer__codec__tests__vp9_args_snapshot.snap
---
source: src/renderer/codec.rs
expression: args
---
- "-pix_fmt"
- yuv420p
- "-c:v"
- libvpx-vp9
- "-crf"
- "33"
- "-b:v"
- "0"
- "-cpu-used"
- "4"
- "-row-mt"
- "1"
- "-map"
- "[vout]"
- "-map"
- "[aout]"
- "-c:a"
- libopus
- "-b:a"
- 128k
- "-ar"
- "48000"
- "-ac"
- "2"
- /out/test.webm
